# public-tip-lab

./: DATA_DICTIONARY.md  METHODOLOGY.md  README.docx  app.py  pyproject.toml  requirements.txt
scripts/: demo_dashboard.bat  export_ledger.bat  launch_dashboard.bat  run_once.bat  setup_windows.bat  start_experiment.bat
src/reddit_bet_lab/: __init__.py  analytics.py  cli.py  config.py  dashboard.py  db.py  demo.py  http_client.py  models.py  odds_client.py  parser.py  pipeline.py  reddit_client.py  settlement.py
tests/: test_analytics.py  test_db.py  test_odds_matching.py  test_parser.py  test_settlement.py
